[package]
name = "knien"
description = "Typed RabbitMQ interfacing for async Rust"
version = "0.1.0"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/hdoordt/knien"
repository = "https://github.com/hdoordt/knien"
documentation = "https://docs.rs/knien"
readme = "README.md"
keywords = ["rabbitmq", "amqp", "queue", "broker"]
categories = ["asynchronous", "web-programming"]

exclude = ["docker-compose.yml"]

[dependencies]
async-trait = "0.1.64"
dashmap = "5.4.0"
futures = "0.3.26"
lapin = "2.1.1"
pin-project = "1.0.12"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"], optional = true }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }

[features]
default = ["rpc"]
rpc = ["dep:tokio"]
