[package]
name = "knien"
description = "Typed RabbitMQ interfacing for async Rust"
version = "0.0.1"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/hdoordt/knien"
repository = "https://github.com/hdoordt/knien"
documentation = "https://docs.rs/knien"
readme = "README.md"
keywords = ["rabbitmq", "amqp", "queue", "broker"]
categories = ["asynchronous", "web-programming"]

exclude = ["docker-compose.yml"]

[dependencies]
async-trait = "0.1.64"
dashmap = { version = "5.4.0", optional = true }
futures = "0.3.26"
lapin = "2.1.1"
pin-project = "1.0.12"
regex = { version = "1.7.1", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["sync", "rt"], optional = true }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }

[features]
default = ["rpc", "topic"]
rpc = ["dep:tokio", "dep:dashmap"]
topic = ["dep:regex"]
