[package]
name = "knien"
description = "Typed RabbitMQ interfacing for async Rust"
version = "0.0.10"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/hdoordt/knien"
repository = "https://github.com/hdoordt/knien"
documentation = "https://docs.rs/knien"
readme = "README.md"
keywords = ["rabbitmq", "amqp", "queue", "broker"]
categories = ["asynchronous", "web-programming"]

exclude = ["docker-compose.yml"]

[dependencies]
async-trait = "0.1.64"
dashmap = { version = "5.4.0", optional = true }
futures = { version = "0.3.26", default-features = false }
lapin = { version = "2.2.1", default-features = false }
regex = { version = "1.7.1", default-features = false, features = [
    "std",
], optional = true }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
tracing = { version = "0.1.37", default-features = false }
tokio = { version = "1.25.0", features = ["sync", "rt"], optional = true }
uuid = { version = "1.3.0", default-features = false, features = ["v4"] }

[dev-dependencies]
tracing = "0.1.37"
test-case = "3.0.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = "0.3.17"
serde_json = { version = "1.0.93", default-features = false }

[features]
default = ["rpc", "topic"]
rpc = ["dep:tokio", "dep:dashmap"]
topic = ["dep:regex"]
